# CUHKSZ-CSC4005

./: .gitignore  LICENSE  README.md
docs/: Cluster & Slurm User Guide.md  Instruction on Passwordlessly Connecting to Cluster by Setting Up SSH Key Authentification.md  Instruction on Profiling with perf and nsys.md  docker_installation_guide.md
project1/: .clang-format  CMakeLists.txt  README.md
project1/src/: CMakeLists.txt  utils.cpp  utils.hpp
project1/src/cpu/: CMakeLists.txt  mpi_PartA.cpp  mpi_PartB.cpp  mpi_PartC.cpp  openmp_PartA.cpp  openmp_PartB.cpp  openmp_PartC.cpp  pthread_PartA.cpp  pthread_PartB.cpp  pthread_PartC.cpp  sequential_PartA.cpp  sequential_PartB-optimized.cpp  sequential_PartB.cpp  sequential_PartB_soa.cpp  sequential_PartC_aos.cpp  sequential_PartC_soa.cpp  simd_PartA.cpp  simd_PartB.cpp  simd_PartC.cpp  vectorize_PartA.cpp  vectorize_PartB.cpp  vectorize_PartC.cpp
project1/src/cpu/optional/: simd_PartA.cpp  simd_PartB.cpp  simd_PartC.cpp
project1/src/gpu/: CMakeLists.txt  cuda_PartA.cu  cuda_PartB.cu  cuda_PartC.cu  openacc_PartA.cpp  openacc_PartB.cpp  openacc_PartC.cpp  triton_PartA.py  triton_PartB.py  triton_PartC.py
project1/src/scripts/: sbatch.sh  sbatch_PartA.sh  sbatch_PartB.sh  sbatch_PartB_profile.sh  sbatch_PartC.sh  sbatch_PartC_profile.sh
project1/src/scripts/optional_profile/: sbatch_PartA_profile.sh  sbatch_PartB_profile.sh  sbatch_PartC_profile.sh
project2/: .clang-format  CMakeLists.txt  README.md
project2/bonus/gpu/: cuda.cu  openacc.cpp
project2/bonus/simd/: simd.cpp
project2/bonus/src_sparse/: CMakeLists.txt  parallelized.cpp  sparse_matrix.cpp  sparse_matrix.hpp
project2/matrices/: matrix1.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrix5.txt  matrix6.txt
project2/src/: CMakeLists.txt  data_parallel.cpp  generate_matrix.py  generate_matrix.sh  locality.cpp  matrix.cpp  matrix.hpp  mpi.cpp  naive.cpp  openmp.cpp  sbach.sh  task1_fma_restrict_ptr.cpp  task1_fma_standalone_var.cpp  task2_const_ptr_decl.cpp  task3_loop_interchange.cpp  task3_transpose.cpp  task4_tiling_loop_interchange.cpp  task4_tiling_transpose.cpp  task5_auto_vec.cpp  task6_openmp.cpp
project2/src/compiler-explorer/: example-fma.cpp
project2/src/gpu/: CMakeLists.txt  ReadeME.md  cuda.cu  kernel_launch.cu  kernels.cuh  matrix_lowPre.cpp  matrix_lowPre.hpp
project2/src/scripts/: sbatch_matmul5x6.sh  sbatch_matmul7x8.sh
project2/src/src_sparse/: naive.cpp  sparse_matrix.cpp  sparse_matrix.hpp
project2/src_sparse/: naive.cpp  parallelized.cpp  sbach.sh
project3/: CMakeLists.txt  README.md
project3/src/: CMakeLists.txt  sbach.sh  sbach_bonus.sh  sbatch-cpu-radixsort.sh  sbatch-normal.sh  sbatch-uniform.sh  sbatch.sh  std_sort.cpp  utils.cpp  utils.hpp
project3/src/bucketsort/: CMakeLists.txt  mpi.cpp  sequential.cpp
project3/src/mergesort/: CMakeLists.txt  mergesort.cpp  openmp.cpp  parallel.cpp  sequential.cpp
project3/src/odd-even-sort/: CMakeLists.txt  mpi.cpp  sequential.cpp
project3/src/psrs/: CMakeLists.txt  mpi.cpp
project3/src/quicksort/: CMakeLists.txt  mpi.cpp  parallel.cpp  quicksort.cpp  sequential.cpp
project3/src/radixsort-cpu/: CMakeLists.txt  mpi.cpp  omp.cpp  sequential.cpp
project3/src/radixsort-gpu/: CMakeLists.txt  cuda_radixsort.cu  radixsort.cpp  sequential.cpp
project3/src/searching-cpu/: CMakeLists.txt  parallel_array.cpp  sequential_array.cpp
project3/src/searching-gpu/: CMakeLists.txt  array_gpu.cpp
project4/: CMakeLists.txt  README.md  sbatch.sh  test.sh  triton_test.sh
project4/MINST/: readme.txt
project4/bash/: build.sh  test.sh
project4/code/: mlp_main.cpp  mlp_network.hpp  ops.hpp  utlis.cpp
project4/part1_softmax_and_vector_add/: cuda_softmax.cu  triton_softmax.py  triton_vector_addtion.py
project4/part2_flash_attention/: triton_part.py
project4/part3_sparse_flash_attention/: triton_part.py
project4/reference/: Warning.md  mlp_pytorch.py
project4/scripts/: sbatch_Part1.sh  sbatch_Part2.sh  sbatch_Part3.sh
project4/src/: mlp_main.cpp  mlp_network.cpp  mlp_network.hpp  mlp_openacc_fusion.cpp  mlp_openacc_kernel.cpp  mlp_sequential.cpp  nn_classifier.cpp  nn_classifier_openacc.cpp  ops.cpp  ops.hpp  ops_openacc_fusion.cpp  ops_openacc_kernel.cpp  simple_ml_ext.cpp  simple_ml_ext.hpp  simple_ml_openacc.cpp  simple_ml_openacc.hpp  softmax_classifier.cpp  softmax_classifier_openacc.cpp  utils.cpp  utils.hpp
project4/triton/: data_load.py  mlp_triton.py
project4/triton/ops/: op_addbias.py  op_matmul.py  op_relu.py  op_relu_backward.py  op_sum.py
sample_programs/: README.md  avx512_vectorized_addition.cpp  cuda_hello.cu  mpi_hello.cpp  openacc_hello.cpp  openacc_parallel.cpp  openmp_hello.cpp  pthread_hello.cpp  sbatch.sh
sample_programs/triton-tutorials/: 01-vector-add.py  02-fused-softmax.py  README.md
tutorials/tutorial1/: README.md  cuda_vector_addition.cu  mpi_vector_addition.cpp  openmp_vector_addition.cpp  pthread_vector_addition.cpp  sbatch.sh
